# neurons

./: Conferences.md  ProjectHome.md  ProjectX.md
c++/: Makefile  TODO  readme
c++/CVS/: Entries
c++/cmake/: CMakeLists.txt  Makefile  cmake_install.cmake
c++/cmake/Modules/: FindBBP-SDK.cmake  FindBoost.cmake  FindGLEW.cmake  FindGSL.cmake  FindGTK2.cmake  FindGtkGLExt.cmake  FindHDF5.cmake  FindOpenCV.cmake
c++/core/: Axis.cpp  BBP_Morphology.h  Cloud.h  CloudFactory.h  Cloud_P.h  Configuration.cpp  Configuration.h  Cube.h  CubeDijkstra.cpp  CubeDijkstra.h  CubeFactory.cpp  CubeFactory.h  CubeLiveWire.cpp  CubeLiveWire.h  Cube_C.cpp  Cube_C.h  Cube_P.cpp  Cube_P.h  Cube_T.cpp  Cube_T.h  Cube_data.h  Cube_display.h  Cube_image.h  DoubleSet.cpp  DoubleSet.h  Edge.d  Edge.h  Edge2W.h  EdgeSet.cpp  EdgeSet.d  EdgeSet.h  EdgeW.h  GaussianPyramid.h  Graph.d  Graph.h  GraphCut.cpp  GraphCut.h  GraphFactory.h  Graph_P.h  Image.h  (+47 more)
c++/deb/: control  createDeb.sh  howto.txt
c++/doc/: Doxyfile  coordinates.txt  dependencies.txt
c++/plugins/: Readme.txt
c++/qtInterface/: ActorSet.cpp  CubeDialog.ui  MainWindow.cpp  Makefile  Stage.cpp  Stage.h  main.cpp  moc_CubeDialog.cpp  moc_MainWindow.cpp  moc_Stage.cpp  qtInterface  qtInterface.pro  ui_CubeDialog.h  ui_main.h
c++/scratch/: scratch.cpp
c++/shaders/: edge.frag  edge.vert
c++/tests/: MSTthroughShortestPath.cpp  Makefile  checkNonMaxSup.cpp  clone.cpp  convolutionsFast.cpp  convolutionsSlow.cpp  cubeTIFF.cpp  generalParser.cpp  graph.cpp  graphToDisplayList.cpp  gslMinimization.cpp  hermitePolynomials.cpp  idsToVolume.cpp  imageTest.cpp  inheritance.cpp  kMSTFileToGraph.cpp  kMSTGraphToFile.cpp  kMSTevaluateDir.cpp  kMSTgraphAddScale.cpp  kMSTgraphToHighResgraph.cpp  point.cpp  templates.cpp  tryManyPaths.cpp  tryManyPathsCloud.cpp  vector.cpp
c++/viewer/: nesegview.glade
matlab/3d_annotator/: annotate_3d.fig  annotate_3d.m  mylabels.mat
matlab/3d_tools/: FIBSLICE0303_left.xml  annotator3D.m  myginput.m  polys2xml.m
matlab/adaboost/: ada_adaboost.m  ada_cascade_collect_data.m  ada_cascade_init.m  ada_cascade_length.m  ada_cascade_precom.m  ada_cascade_select_threshold.m  ada_classifier_init.m  ada_classify_cascade.m  ada_classify_individual.m  ada_classify_set.m  ada_classify_strong.m  ada_collect_data.m  ada_collect_data_backup.m  ada_cut_cascade.m  ada_define_weak_classifiers.m  ada_define_weak_classifiers_new.m  ada_define_weak_learners.m  ada_face_detect.m  ada_fast_haar_response.m  ada_find_haar_parameters2.m  ada_haar_classify.m  ada_haar_define.m  ada_haar_learn.m  ada_haar_response.m  ada_haar_trclassify1.m  ada_haar_trclassify2.m  ada_help.m  ada_hog_define.m  ada_hog_response.m  ada_intmean_define.m  ada_learner_list.m  ada_precompute.m  ada_precompute_haar_response.m  ada_precompute_haar_response_new.m  ada_recompute.m  ada_resume_train_cascade.m  ada_scan.m  ada_settings.m  ada_spangle_define.m  ada_spdiff_define.m  (+29 more)
matlab/basel/: HappyNeuronVector.m  MoveFromMP4ToAVI.py  ProcessingFeedback.py  bsOrganizePlateData.m  processPlate.m  processPlate1.m  sinergia-datasets-paths.txt  sinergia-repeats.txt  testSeparateTrk_features.m  trkFeaturesExtraction.m  trkFindBranches.m  trkFindFilopodia.m  trkMovie.m  trkPostProcessing.m  trkReadAndNormalizeImages.m  trkRegionGrow3.m  trkRenderImages2.m  trkSetSigmoid.m  trkSmoothAndCleanRun.m  trkTimeDependentAnalysis.m  trkTrackNeurites.m  trkTracking.m
matlab/basel10x/: ComputeProbabilityMapShortestPath.cpp  assignFilamentsGlobal.m  assignPriors.m  getBestLogThresh.m  getNucleiBinaryMask.m  getTrackSequences.m  make_adjacency.m  preprocessImages2.m  preprocessImagesMSER.m  preprocessImagesThresholding.m  processPlate.m  processPlateMSER.m  processPlateThresholding.m  read-datasets-paths.m  readlinefile.m  sampleViperCircleTracking.xml  stdMedianTests.m  testLowPass.m  trkComputeTubularity.m  trkDetectAndAddFilamentsToCells.m  trkDetectFilamentsGlobalThresh.m  trkDetectFilamentsLocalThresholding.m  trkDetectSomataGrouped.m  trkDetectSomataWithMorphologicalSnakes.m  trkGatherDetections.m  trkGenerateNucleiGraphAndTrack.m  trkGenerateSequencesforAnnotations.m  trkMovie.m  trkReadAndNormalizeImages2.m  trkReadImages.m  trkRenderImages2.m  trkRenderImages3.m  trkRenderImagesNucleiSomata.m  trkRenderImagesNucleus.m  trkSkeletonize2.m  trkTrackCellsAndWriteToViper.m  trkTracking.m  trkTracking2.m  trkTracking3.m  trkTrackingMSER.m
matlab/baselFigure/: Readme.txt  make_csv.m  processListOfPlates.m  run_tracker.m  trkConvertTo8bit.m  trkMovie2.m  trkRenderFancy.m
matlab/baselFinal/: ForSelectionLudo.m  PathsToDatasets-10X-Groupe1.txt  PathsToDatasets-10X-Groupe2.txt  PathsToDatasets-10X.txt  PathsToDatasets-20X-Group1.txt  history_of_file  processListOfPlates.m  processPlate.m  sinergia-datasets-paths-20x.txt  trkDetectAndAddFilamentsToCells.m  trkDetectNuclei.m  trkDetectSomataGlobal.m  trkFindBranches.m  trkGatherNucleiAndSomataDetections.m  trkGreedyConnect2.m  trkKShortestPaths.m  trkMovie.m  trkReadImagesAndNormalize.m  trkReorganizeDataStructure.m  trkTracking.m
matlab/projectx/src/: CMakeLists.txt  Cloud.h  Readme.txt  buildmex.sh  common.h  enumerateLearners.cpp  enumerateLearners.h  integral.cpp  integral.h  intensityFeature.cpp  intensityFeature.h  loadImage.cpp  loadImage.h  memClient.cpp  memClient.h  memDaemon.cpp  mexBoxIntegral.c  mexEnumerateLearners.c  mexIntegralImage.c  mexIntensityFeature.c  mexLoadResponse.c  mexRectangleFeature.c  mexStoreResponse.c  utils.cpp  utils.h
matlab/projectx/src/test/: enumerateLearners.m  showImg.m  testmap.cpp
raysC/: CMakeLists.txt  buildmex.sh  combnk.cpp  combnk.h  combnk.tcpp  mexDistDiffRays.c  mexRays.c  rays.cpp  rays.h  readme.txt
trunk/c++/cmake/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/c++/cmake/Modules/: FindBBP-SDK.cmake  FindBoost.cmake  FindGLEW.cmake  FindGmodule.cmake  FindGtkGLExt.cmake  FindOpenCV.cmake  UseSWIG.cmake
trunk/raysC/: CMakeLists.txt  buildmex.sh  mexDistDiffRays.c  mexRays.c  rays.cpp  rays.h
wiki/: Conferences.wiki  ProjectX.wiki  adaboostTODO.wiki
(+2070 files in other folders)
